set up testing with mocha

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,5 +9,10 @@
       "devDependencies": true,
       optionalDependencies: false,
     }]
+  },
+  "globals": {
+    "describe": true,
+    "it": true,
+    "expect": true
   }
 }
