--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   "scripts": {
     "clean": "rm -rf api/lib",
     "lint": "eslint src test",
-    "check": "npm run lint -s && dependency-check package.json --entry src",
-    "watch": "watch 'npm run build' src test",
-    "test": "babel-node test/index.js | tspec",
+    "check": "dependency-check package.json --entry src",
+    "test": "mocha './src/**/*.spec.js'",
     "prebuild": "npm run check -s && npm run clean -s",
     "build": "babel --optional runtime src -d api/lib",
     "build:node_modules": "cd api && npm install && cd ..",
@@ -46,6 +45,7 @@
     "babel-eslint": "^4.1.6",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
     "coveralls": "^2.11.4",
     "dependency-check": "^2.5.1",
     "doctoc": "^0.15.0",
@@ -53,12 +53,12 @@
     "eslint-config-airbnb-base": "^7.1.0",
     "eslint-plugin-import": "^1.15.0",
     "isparta": "^4.0.0",
-    "tap-spec": "^4.1.1",
-    "tape": "^4.2.2",
-    "watch": "^0.16.0"
+    "mocha": "^3.1.2",
+    "sinon": "^1.17.6",
+    "watch": "^0.16.0",
+    "sinon-chai": "^2.8.0"
   },
   "dependencies": {
-    "blue-tape": "^1.0.0",
     "bluebird": "^3.4.6"
   }
 }
