--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "homepage": "https://github.com/BraunreutherA/serverless_boilerplate#readme",
   "devDependencies": {
+    "aws-lambda-test-utils": "^1.0.2",
     "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
     "babel-eslint": "^4.1.6",
@@ -55,8 +56,8 @@
     "isparta": "^4.0.0",
     "mocha": "^3.1.2",
     "sinon": "^1.17.6",
-    "watch": "^0.16.0",
-    "sinon-chai": "^2.8.0"
+    "sinon-chai": "^2.8.0",
+    "watch": "^0.16.0"
   },
   "dependencies": {
     "bluebird": "^3.4.6"
