--- a/serverless.yml
+++ b/serverless.yml
@@ -49,7 +49,7 @@ package:
 
 functions:
   hello:
-    handler: handler.hello
+    handler: lib/handler
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
