--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-import": "^1.15.0",
     "isparta": "^4.0.0",
     "mocha": "^3.1.2",
+    "serverless": "^1.0.2",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "watch": "^0.16.0"
