added mocha before and after hooks to global eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,10 @@
     "describe": true,
     "it": true,
     "expect": true,
+    "before": true,
+    "after": true,
+    "beforeEach": true,
+    "afterEach": true,
     "createLambdaContext": true,
     "createS3Event": true,
     "createSNSEvent": true,
